# wealth_manager

./: .gitignore  plan.md
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/middleware/: auth.py  rate_limiter.py
backend/app/models/: __init__.py  account.py  debt.py  enums.py  goal.py  holding.py  snapshot.py  transaction.py  user.py
backend/app/repositories/: account_repository.py  base.py  goal_repository.py  transaction_repository.py  user_repository.py
backend/app/routers/: accounts.py  advisory.py  auth.py  goals.py  health.py  plaid.py  sync.py  transactions.py  webhooks.py
backend/app/schemas/: __init__.py  account.py  advisory.py  auth.py  common.py  debt.py  goal.py  holding.py  plaid.py  snapshot.py  sync.py  transaction.py  user.py
backend/app/services/: account_service.py  (+9 more)
backend/migrations/: env.py
backend/scripts/: dev-auth.sh  dev-setup.sh
backend/tests/: conftest.py  test_account_router.py  test_advisory_router.py  test_advisory_service.py  test_alert_service.py  test_auth_middleware.py  test_auth_router.py  test_auth_service.py  test_claude_integration.py  test_claude_service.py  test_encryption.py  test_goal_router.py  test_health.py  test_models.py  test_plaid_router.py  test_plaid_sandbox_integration.py  test_plaid_sandbox_webhooks.py  test_plaid_service.py  test_prompt_manager.py  test_report_service.py  test_schemas.py  test_sync_router.py  test_sync_service.py  test_webhook_verification.py
(+238 files in other folders)
